# Veloxide

./: .adr-dir  .env.example  .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  bacon.toml  bacon.toml.example  codecov.yml  compose.yaml  docker-compose.yml  fly.toml  justfile  veloxide-config.yaml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-guide.yml  veloxide-backend-cd.yml  veloxide-backend-ci.yml
backend/: .env.example  Dockerfile  fly.toml
backend/crates/veloxide-server/: .env.example  Cargo.toml  build.rs  sqlx-data.json
backend/crates/veloxide-server/.sqlx/: query-606b4d715b40f7221272dd8a82d99b0c87901171c715f3a8404bd457e5db6ee5.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-cfbda6e41da03e16de145d7aa53005b0c865021cab81ea0c7fe76ab39b8285c8.json  query-d97305000808fb3c9e26a028a1193b7a6dbc28e8cc85522e56e20b7ee61f2916.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
backend/crates/veloxide-server/migrations/: 20230709123643_account_query.up.sql  20230801144442_users-table.up.sql  20230821183908_additional_user_fields.down.sql  20230821183908_additional_user_fields.up.sql
backend/crates/veloxide-server/src/: error.rs  main.rs  prelude.rs
backend/crates/veloxide-server/src/application/: auth_service.rs  bank_account_application_service.rs  mod.rs  user_service.rs
backend/crates/veloxide-server/src/domain/bank_account/: bank_account_aggregate.rs
backend/crates/veloxide-server/src/domain/oauth2_state/: mod.rs  oauth2_state_repository.rs
backend/crates/veloxide-server/src/domain/user/: user_aggregate.rs  user_repository.rs
backend/crates/veloxide-server/src/infrastructure/: auth_utils.rs  db.rs  logging.rs  mod.rs  observability.rs
backend/crates/veloxide-server/src/infrastructure/cryptography/: auth_token.rs  error.rs  mod.rs
backend/crates/veloxide-server/src/infrastructure/grpc/: auth_grpc_service.rs  bank_account_grpc_service.rs  mod.rs
backend/crates/veloxide-server/src/infrastructure/middleware/: auth.rs  error.rs  mod.rs
backend/crates/veloxide-server/src/infrastructure/repositories/: oauth2_state_repository.rs  user_repository.rs
backend/crates/veloxide-server/src/infrastructure/web_server/: configuration.rs  cors.rs  graphql.rs  mod.rs
backend/crates/veloxide-server/src/infrastructure/web_server/oauth/: azure.rs  google.rs  handlers.rs  microsoft.rs  mod.rs
backend/crates/veloxide-server/src/interfaces/: hello.rs  mod.rs
backend/crates/veloxide-server/src/interfaces/bank_account/: bank_account_views.rs
backend/crates/veloxide-server/src/interfaces/protos/: README.md
backend/migrations/: 20230709123545_events.up.sql  20230801165044_oauth2_state.up.sql
contracts/: README.md  auth.proto  bank_account_service.proto
crates/db/: Cargo.toml
crates/prisma-cli/: Cargo.toml
crates/veloxide-server/: Cargo.toml  sqlx-data.json
docs/: Why-Rust.md
docs/guide/: book.toml
frontends/sveltekit/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
migrations/: 20230000000000_timezone.down.sql  20230709123643_account_query.down.sql  20230801165044_oauth2_state.down.sql
policies/: README.md  authz.rego  authz_test.rego
src/: error.rs  main.rs
src/configuration/: db_connection.rs  mod.rs  observability.rs  (+1 more)
(+86 files in other folders)
